--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -8,12 +8,12 @@
     tools:context=".MainActivity2">
 
     <EditText
-        android:id="@+id/text_name"
+        android:id="@+id/edit_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="15sp"/>
     <EditText
-        android:id="@+id/text_email"
+        android:id="@+id/edit_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="15sp"/>
